--- a/style.css
+++ b/style.css
@@ -89,7 +89,17 @@ h3.why_us{
 {
     .element{
         margin-top:150px;
-        width:150%;
+        width:100%;
+        height:150%;
+    }
+    .element h1{
+        font-size:25px
+    }
+    .element h2{
+        font-size:20px
+    }
+    .element h3{
+        font-size:15px
     }
     .right{
         width:100%;
@@ -106,11 +116,30 @@ h3.why_us{
         margin-left:-30px;
         text-align:center;
     }
+    div.left p{
+        font-size:25px
+    }
+    div.left p.P_1{
+    font-size:80px
+}
+    div.left p.P_2{
+    font-size:25px
+}
+    div.left p.P_3{
+    font-size:25px
+}
     .width{
         width:70%
     }
     .sign_up{
         position:relative;
         left:15%;
+        font-size:20px;
     }
+    h1.why_us{
+    font-size:35px
+}
+h3.why_us{
+    font-size:25px
+}
 }
